# ChangeLog for media-video/sundtek-tv
# Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
# $Header: $

*sundtek-tv-141111.122431 (12 Dec 2014)

  12 Dec 2014; Martin Väth <martin@mvath.de>:
  Version bump, remove old ebuild

*sundtek-tv-141111.122431 (11 Nov 2014)

  11 Nov 2014; Martin Väth <martin@mvath.de>:
  Version bump, remove old ebuild

*sundtek-tv-141016.181612 (19 Oct 2014)

  19 Oct 2014; Martin Väth <martin@mvath.de>:
  Version bump, remove old ebuild

*sundtek-tv-140918.104249 (20 Sep 2014)

  20 Sep 2014; Martin Väth <martin@mvath.de>:
  Version bump, remove old ebuild

*sundtek-tv-140727.221230 (29 Jul 2014)

  29 Jul 2014; Martin Väth <martin@mvath.de>:
  Version bump, remove old ebuild

*sundtek-tv-140715.054711 (16 Jul 2014)

  16 Jul 2014; Martin Väth <martin@mvath.de>:
  Version bump, remove old ebuild

*sundtek-tv-140711.143644 (13 Jul 2014)

  13 Jul 2014; Martin Väth <martin@mvath.de>:
  Version bump, remove old ebuild

*sundtek-tv-140701.143639 (07 Jul 2014)

  07 Jul 2014; Martin Väth <martin@mvath.de>:
  Version bump, remove old ebuild

*sundtek-tv-140629.115654 (29 Jun 2014)

  29 Jun 2014; Martin Väth <martin@mvath.de>:
  Version bump, remove old ebuild

*sundtek-tv-140601.005015 (03 Jun 2014)

  03 Jun 2014; Martin Väth <martin@mvath.de>:
  Version bump, remove old ebuild

*sundtek-tv-140528.222950 (29 May 2014)

  29 May 2014; Martin Väth <martin@mvath.de>:
  Version bump, remove old ebuild. openat() fixed on 32 bit: tar-1.27.1 works.
  Thanks again to the Sundtek support!

*sundtek-tv-140517.123345 (24 May 2014)

  24 May 2014; Martin Väth <martin@mvath.de>:
  Version bump, remove old ebuild

*sundtek-tv-140510.143826-r1 (12 May 2014)

  12 May 2014; Martin Väth <martin@mvath.de>:
  Add check for INPUT_UINPUT ball. Thanks again to the Sundtek support!

*sundtek-tv-140510.143826 (11 May 2014)

  11 May 2014; Martin Väth <martin@mvath.de>:
  Move to versioned tarball support. Thanks to the Sundtek support!
