@@ -1,1 +1,1 @@
-DIST sundtek_installer_141209.042745.sh 23577891 SHA256 038763fea41e2439ab7d34c69bdada689e8ec3566efee55f1eefb21d183b2c8c SHA512 805edb6603f39fee8c1f1005d19ee4256d0d4e3452d4ca681a698e0402ef98c9964f612f472e5446d2d70ed192ece0861a41ee6a61853a1b81fe21d16870cfb8 WHIRLPOOL cdf777d12aca9c94306989ee5316111c536b6124efcecce79d5df623d6d748fce94d663ffe6b6210b30a6c01daae70912f039407ab93af8505d5099b2c0085d4
+DIST sundtek_installer_141222.213801.sh 23591338 SHA256 7d50d6d7aa1807c591806dae062ffe406872a7adab91c80fa95dc81db31cec65 SHA512 f9ee343cc00405e7bc1dd0f40132b3636ae1bc048358ae8b4b78290488bdd1e8e0f390f955d9811461df4b99215b2a26330d5461ebb64fe995d4df4ba4ef618b WHIRLPOOL 00a6a0c365a9f40322864d8f96b2eb776a0fa288fbdfcfaa835df9580eb12520ac558b342ae408a05d745b1c9bcfc7bdabc1e810d983e8c55b5d6aacf8d2cf98
